--- a/_includes/author-profile.html
+++ b/_includes/author-profile.html
@@ -75,7 +75,7 @@
         <li><a href="{{ author.zotero }}"><i class="ai ai-zotero ai-fw icon-pad-right"></i>Zotero</a></li>
       {% endif %}
       {% if author.lattes %}
-        <li><a href="{{ author.lattes }}"><img src="{{ '/images/lattes.svg' | relative_url }}" class="ai ai-fw icon-pad-right" style="width: 1em; height: auto; vertical-align: middle;">Lattes</a></li>
+        <li><a href="{{ author.lattes }}"><img src="{{ '/images/lattes.svg' | relative_url }}" class="fab fa-fw icon-pad-right" style="width: 1.1em; height: 1.1em; vertical-align: -0.125em;">Lattes</a></li>
       {% endif %}
       
 
