--- a/_includes/author-profile.html
+++ b/_includes/author-profile.html
@@ -75,9 +75,8 @@
         <li><a href="{{ author.zotero }}"><i class="ai ai-zotero ai-fw icon-pad-right"></i>Zotero</a></li>
       {% endif %}
       {% if author.lattes %}
-        <li><a href="{{ author.lattes }}"><img src="{{ '/images/lattes.svg' | relative_url }}" class="fab fa-fw icon-pad-right" style="width: 1.1em; height: 1.1em; vertical-align: -0.125em;">Lattes</a></li>
+        <li><a href="{{ author.lattes }}"><span class="fab fa-fw icon-pad-right" style="display: inline-flex; justify-content: center; align-items: center; width: 1.25em;"><img src="{{ '/images/lattes.svg' | relative_url }}" style="height: 1.1em; width: auto;"></span>Lattes</a></li>
       {% endif %}
-      
 
       <!-- Font Awesome icons / Repositories and software development -->
       {% if author.bitbucket %}
